<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.widget.DecorCaptionView android:orientation="vertical" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/caption" android:background="@drawable/decor_caption_title" android:focusable="false" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="end" android:orientation="horizontal" android:id="@id/caption_end_container" android:background="@drawable/samsung_decor_caption_ripple_selector" android:paddingBottom="1.0dip" android:focusable="false" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="@dimen/multiwindow_samsung_freeform_decor_caption_window_height">
            <Button android:layout_gravity="end|center" android:id="@id/ghost_window" android:background="@drawable/decor_ghost_button_dark" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="14.0dip" android:soundEffectsEnabled="true" android:contentDescription="@string/ghost_button_text" />
            <Button android:layout_gravity="end|center" android:id="@id/rotate_window" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="8.0dip" />
            <Button android:layout_gravity="end|center" android:id="@id/back_window" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="14.0dip" android:soundEffectsEnabled="true" android:contentDescription="@string/back_button_text" />
            <Button android:layout_gravity="end|center" android:id="@id/minimize_window" android:background="@drawable/samsung_decor_minimize_with_padding_button" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="14.0dip" android:soundEffectsEnabled="true" android:contentDescription="@string/minimize_button_text" />
            <Button android:layout_gravity="end|center" android:id="@id/maximize_window" android:background="@drawable/samsung_decor_maximize_with_padding_button" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="14.0dip" android:soundEffectsEnabled="true" android:contentDescription="@string/maximize_button_text" />
            <Button android:layout_gravity="end|center" android:id="@id/reduce_window" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="8.0dip" />
            <Button android:layout_gravity="end|center" android:id="@id/close_window" android:background="@drawable/samsung_decor_close_with_padding_button" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="9.0dip" android:soundEffectsEnabled="true" android:contentDescription="@string/close_button_text" />
        </LinearLayout>
    </LinearLayout>
</com.android.internal.widget.DecorCaptionView>